--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -34,10 +34,13 @@
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[section] % reset theorem numbering for each chapter
 
+\theoremstyle{plain}
+\newtheorem{lem}[thm]{Lemma} % same for example numbers
+\newtheorem{cor}[thm]{Corollary} % same for example numbers
+
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition} % definition numbers are dependent on theorem numbers
 \newtheorem{exmp}[thm]{Example} % same for example numbers
-\newtheorem{lem}[thm]{Lemma} % same for example numbers
 
 \begin{document}
 \ititle{\ctitle}
