--- a/thesis/result.tex
+++ b/thesis/result.tex
@@ -9,11 +9,11 @@ The legality of a trajectory sequence $\phi=(B_0, \tau_1, B_1, \ldots ,\tau_p, B
 \begin{proof}
 For every trajectory $\tau$ in $\phi$, deciding whether any operation is legal is a check in constant time.
 
-After a fix operation has been made, the gameboard enters a loop and changes according to the clear semantics. This loop can run at most $|B_0| / 4$ times, since at least 4 cells has to be cleared each iteration, and no change can occur if there aren't any cells left to clear. Each iteration requires checking at most $4|B|$ cells; each cell in the gameboard and three neighbors. Thus the time to compute the new gameboard for each $\tau$ in $\phi$ is $\in O(|B_0|^2)$.
+After a fix operation has been made, the gameboard enters a loop and changes according to the clear semantics. This loop can run at most $|B| / 4$ times, since at least 4 cells has to be cleared each iteration, and no change can occur if there aren't any cells left to clear. Each iteration requires checking at most $4|B|$ cells; each cell in the gameboard and three neighbors. Thus the time to compute the new gameboard for each $\tau$ in $\phi$ is $\in O(|B|^2)$.
 
-Checking that applying $\tau_i$ to $P_i$ in $B_{i-1}$ yields $B_i$ requires $|B_0|$ comparisons. 
+Checking that applying $\tau_i$ to $P_i$ in $B_{i-1}$ yields $B_i$ requires $|B| \in O(|B|)$ comparisons. 
 
-Thus we have that checking the validity of $\phi$ in $G$ can be done in $O(|\phi| \cdot |B_0|^2) = \text{poly}(|G|, |\phi|)$. 
+Thus we have that checking the validity of $\phi$ in $G$ can be done in $O(|\phi| \cdot |B|^3) = \text{poly}(|G|, |\phi|)$. 
 \end{proof}
 
 \subsection{Is k-cleared-cells in NP?}
@@ -25,9 +25,9 @@ For any checkable acyclic objective $\Phi$ in Lumines, $\Phi \in NP$.
 \end{thm}
 
 \begin{proof}
-We are given a Lumines game $G = (B_0, P_1, \ldots, P_p)$ and a acyclic trajectory sequence $\phi = (B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$. Let $B_0$ be $m \times n$ gameboard.
+We are given a Lumines game $G = (B_0, P_1, \ldots, P_p)$ and a acyclic trajectory sequence $\phi = (B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$. Let $B_i$ be $m \times n$ gameboard.
 
-Since $\phi$ is acyclic, each of its $p$ trajectories can only contain at most $(m-1)(n-1) + 1 < |B_0|$ states, unfixed once in each possible position and fixed in one final position. Thus $\phi = \text{poly}(G)$.
+Since $\phi$ is acyclic, each of its $p$ trajectories can only contain at most $(m-1)(n-1) + 1 < |B|$ states, unfixed once in each possible position and fixed in one final position. Thus $\phi = \text{poly}(G)$.
 
 Checking whether $\phi$ is acyclic can be done in $\text{poly}(|\phi|) = \text{poly}(|G|)$ time by comparing each operation in every trajectory $\tau$ with the other operations in the same trajectory. Checking the validity of the $\phi$ can be done in $\text{poly}(|G|, |\phi|) = \text{poly}(|G|)$ according to lemma~\ref{lem:legality}.
 
@@ -41,7 +41,7 @@ The objective k-cleared-cells is checkable and acyclic.
 \begin{proof}
 The objective is acyclic because it only depends on fixed block state at the end of each trajectory, since the fix operation is the only way to trigger clearing of cells. The path in the trajectory is therefore irrelevant. 
 
-One can count the total amount of cleared cells simply by scanning the gameboard after each fix loop iteration, and then summing the results of each iteration. As presented in the proof for lemma~\ref{lem:legality}, this loop runs $O(|B_0|^2) = \text{poly}(|G|)$ times. In total the summing can therefore be done in $\text{poly}(|G|, |\phi|)$ time. Thus the objective is checkable.
+One can count the total amount of cleared cells simply by scanning the gameboard after each fix loop iteration, and then summing the results of each iteration. As presented in the proof for lemma~\ref{lem:legality}, this loop runs $O(|B|^2)$ times, and the count of cleared cells can be done in $O(|B|)$. In total the summing can therefore be done in $O(|B|^3 \cdot |\phi|) = \text{poly}(|G|, |\phi|)$ time. Thus the objective is checkable.
 \end{proof}
 
 This naturally leads us to the following corollary:\\
