--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,2 +1,14 @@
 \section{Discussion}
 \label{discussion}
+
+\subsection{Rotations}
+
+The two main ways the player can control the game is to rotate and move the blocks
+
+\subsection{Sweep-line}
+
+In Lumines the sweep-line moves in a constant speed from left to right. The marked squares are cleared when the sweep-line reach the right side of the gameboard. The simplified Lumines instance that is presented in this paper uses an instant sweep-line. This means the blocks are cleared when a new block is fixed which is similar to how rows are cleared in Tetris but not the most true representation of how the sweep-line works in Lumines. There is probably a lot of different ways to make better models of the real sweep-line. For example, we could clear on every $n\text{th}$ block that is fixed to imitate a moving sweep-line where $n$ is an appropriate integer. The instant model was chosen because it was easier to find and prove a reduction in the time given for the project. In future work we would like to inquire into what impact the sweep-line has on the computational complexity and if there would be any significant results using a better model.
+
+\subsection{Online Lumines}
+
+In the reduction and proof of Lumines complexity presented in this paper the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris. In these reports they argue that if a property can be shown in the offline version of the games intuitively it should not be easier in the online version. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. This should also be the case for Lumines although we do not have a proof that this is the case. Therefore the online version of Lumines should be examined in the future to get a better understanding of the real game's complexity.
