--- a/thesis/result.tex
+++ b/thesis/result.tex
@@ -1,5 +1,11 @@
 \section{Result}
-The following lemma will be of use later parts of the proof:\\
+
+\subsection{On the size of problem input}
+The input to a particular instance of the k-cleared-cells problem is the game $G = (B_0, P_1, \ldots, P_p)$. In order to analyze the verifiable of a given solution in polynomial time, we must begin by defining the size $|G|$. The game contains on gameboard $B_0$ of size $|B| = mn$, and $p$ block states which are all of constant size, hence of size $O(p)$ in total. Thus $|G| \in O(|B|p)$.
+
+\subsection{Is k-cleared-cells in NP?}
+
+We begin by proving the following useful lemma:\\
 
 \begin{lem}
 \label{lem:legality}
@@ -16,23 +22,24 @@ Checking that applying $\tau_i$ to $P_i$ in $B_{i-1}$ yields $B_i$ requires $|B|
 Thus we have that checking the validity of $\phi$ in $G$ can be done in $O(|\phi| \cdot |B|^3) = \text{poly}(|G|, |\phi|)$. 
 \end{proof}
 
-\subsection{Is k-cleared-cells in NP?}
-
-Given a Lumines game $G = (B_0, P_1, \ldots, P_p)$, a goal $C$ and a solution $\phi = (B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$, is this solution $\phi$ verifiable in polynomial time? In order to prove this we begin by proving the following modified theorem from \cite{tetris}: \\
+We then prove this modified theorem from \cite{tetris}: \\
 
 \begin{thm}
+\label{thm:npobj}
 For any checkable acyclic objective $\Phi$ in Lumines, $\Phi \in NP$.
 \end{thm}
 
 \begin{proof}
 We are given a Lumines game $G = (B_0, P_1, \ldots, P_p)$ and a acyclic trajectory sequence $\phi = (B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$. Let $B_i$ be $m \times n$ gameboard.
 
-Since $\phi$ is acyclic, each of its $p$ trajectories can only contain at most $(m-1)(n-1) + 1 < |B|$ states, unfixed once in each possible position and fixed in one final position. Thus $\phi = \text{poly}(G)$.
+Since $\phi$ is acyclic, each of its $p$ trajectories can only contain at most $(m-1)(n-1) + 1 \in O(|B|)$ states, unfixed once in each possible position and fixed in one final position. Thus $|\phi| = O(|B|p) = O(|G|)$.
 
 Checking whether $\phi$ is acyclic can be done in $\text{poly}(|\phi|) = \text{poly}(|G|)$ time by comparing each operation in every trajectory $\tau$ with the other operations in the same trajectory. Checking the validity of the $\phi$ can be done in $\text{poly}(|G|, |\phi|) = \text{poly}(|G|)$ according to lemma~\ref{lem:legality}.
 
 Since $\Phi$ is checkable, we can then in time $\text{poly}(|G|, |\phi|) = \text{poly}(|G|)$ verify if $\Phi(G, \phi)$ holds. Thus $\Phi \in \text{NP}$.
 \end{proof}
+
+Now we just have to prove the following lemma, and the original question will be answered as a direct result:\\
 
 \begin{lem}
 The objective k-cleared-cells is checkable and acyclic.
