--- a/thesis/formal.tex
+++ b/thesis/formal.tex
@@ -1,7 +1,10 @@
 \section{Formal definitions}
+\subsection{Lumines rules}
 \label{sub:formal}
 
-This formalization of Lumines roughly follows the methodology of \citeauthor{tetris} in their paper on the computational complexity of Tetris \cite{tetris}. Please note that the formalization corresponds to the simplified model of Lumines considered in this report, rather than the actual video game. With this in mind, in this section `Lumines' should be read as `Lumines with the constraints and modifications this report assumes'.
+This formalization of Lumines follows the methodology of \citeauthor{tetris} in their paper on Tetris \cite{tetris}. Please note that the formalization corresponds to the simplified model of Lumines considered in this report, rather than the actual video game. With this in mind, in this section ``Lumines'' should be read as ``Lumines with the constraints and modifications this report assumes''.
+
+\subsubsection{Game objects}
 
 \begin{description}[style=unboxed, leftmargin=0cm,labelsep=1em]
     \item[The gameboard] The \emph{gameboard} is a grid of $m$ rows and $n$ columns, indexed from bottom-to-top and left-to-right. The $\langle i,j \rangle$th \emph{cell} is either \emph{unfilled}, \emph{black} or \emph{white}. When a cell is either black or white, we call the cell \emph{filled}. In a legal Lumines gameboard, no cell is unfilled if some cell above it is filled.
@@ -35,8 +38,11 @@ In the \textit{initial block state}, the block is in its base orientation unless
     \end{enumerate}
 
     A shorthand is defined for aliasing the blocks in some rotation. For any block color $b \in \{B, W\}^4$ we define $b_{r} = \sigma_{r}(b)$. For example the monochromatic black block rotated one quarter-turn counterclockwise can be referred to as $\mathbf{MB}_{CC}$. Please note that the purpose of this definition is to aid in the proof. In this system rotation is not an allowed block manipulation during gameplay.
+\end{description}
+\subsubsection{Game operations}
+\label{subsub:operations}
 
-    \item[Game operations] No operations are legal for a piece $P = (\mathbf{c}, \langle i,j \rangle, fixed)$. The following operations are legal for a piece $P = (\mathbf{c}, \langle i,j \rangle, unfixed)$, with current gameboard $B$:
+No operations are legal for a piece $P = (\mathbf{c}, \langle i,j \rangle, fixed)$. The following operations are legal for a piece $P = (\mathbf{c}, \langle i,j \rangle, unfixed)$, with current gameboard $B$:
 
     \begin{enumerate}
         \item A \emph{slide to the right}. if the cells $\langle i,j+1 \rangle$ and $\langle i+1, j+1 \rangle$ are unfilled and in the bounds of the gamboard the move is legal. The new block state is $(\mathbf{c}, \langle i, j+1 \rangle, unfixed)$.
@@ -45,7 +51,10 @@ In the \textit{initial block state}, the block is in its base orientation unless
         \item A \emph{fix}. If the cells $\langle i-1, j \rangle$ or $\langle i-1, j+1 \rangle$ are filled or $i=1$ the move is legal. The new block state is $(\mathbf{c}, \langle i, j \rangle, fixed)$.
     \end{enumerate}
 
-\item[Playing the game] A \textit{trajectory} $\tau$ of a block $P$ is a sequence of (legal) game moves starting from the initial block state and ending with a fix operation. The application of a trajectory to a block $P$ in a gameboard $B$ renders a new gameboard $B'$ according to the following rules:
+\subsubsection{Gameplay}
+\label{subsub:gameplay}
+
+A \textit{trajectory} $\tau$ of a block $P$ is a finite sequence of (legal) game moves starting from the initial block state and ending with a fix operation. The application of a trajectory to a block $P$ in a gameboard $B$ renders a new gameboard $B'$ according to the following rules:
 
     \begin{enumerate}
             \item $B'$ is initially $B$ with the cells of block $P$ filled.
@@ -54,23 +63,28 @@ In the \textit{initial block state}, the block is in its base orientation unless
             \item If any filled cell $\langle i,j \rangle$ in $B'$ and its surrounding cells $\langle i+1,j+1 \rangle$, $\langle i, j+1 \rangle$ and $\langle i+1, j \rangle$ are the same color, these cells are marked and cleared instantly. Any filled cells in $B'$ not directly above other filled cells or the bottom row now drops until they are. This stage is repeated until a further step would not result in any changes on the gameboard. $B'$ is now the results of these steps.
     \end{enumerate}
 
-    A \textit{game} $(B_0, P_1, \ldots, P_p)$ is defined as an initial gameboard and a sequence of blocks to be placed by the player. A \textit{trajectory sequence} $\phi$ is a sequence $(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$ which for each $i$ the trajectory $\tau_i$ applied to the game block $P_i$ on the gameboard $B_{i-1}$ results in gameboard $B_i$. If $\phi$ contains any trajectory $\tau_q$ which triggers a game over, $\phi$ naturally terminates at $B_q$ instead of $B_p$.
-    \end{description}
+A \textit{game} $(B_0, P_1, \ldots, P_p)$ is defined as an initial gameboard and a sequence of blocks to be placed by the player. A \textit{trajectory sequence} $\phi$ is a sequence $(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$ which for each $i$ the trajectory $\tau_i$ applied to the game block $P_i$ on the gameboard $B_{i-1}$ results in gameboard $B_i$. If $\phi$ contains any trajectory $\tau_q$ which triggers a game over, $\phi$ naturally terminates at $B_q$ instead of $B_p$.
 
-\subsubsection{The k-cleared-cells problem}
-The main Lumines goal this paper is concerned with is the problem of maximizing the amount of cleared cells given a particular game. Naturally the domain of the problem is the simplified version of Lumines previously presented in~\ref{sub:formal}. The problem is formulated as a decision problem in this domain as follows:
-
-\begin{quote}
-\textbf{The (offline, no-rotation) k-cleared-cells problem}: Given a Lumines game $G$ and a goal $k \in \mathbb{N}$, does there exist a trajectory sequence $\phi$ such that when $\phi$ is applied to $G$, at least $k$ cells are cleared in total?
-\end{quote}
-
-\subsubsection{Checkable and acyclic goals}
-The notion of checkable and acyclic goals is presented in \cite{tetris}. These definitions will aid in proving k-cleared-cells to be in NP. It is used in a similar manner in the original paper.\\
+\subsection{Checkable and acyclic goals}
+The notion of checkable and acyclic goals is presented in \cite{tetris}. These definitions will aid the proof presented later in this report. It is used in a similar manner in the original paper.\\
 
 \begin{defn}
+\label{defn:checkable}
 We say that an objective function $\Phi$ is \textit{checkable} when, given a a game $G$ and a trajectory sequence $\phi$, we can compute the truth value of $\Phi(G, \phi)$ in time $\text{poly}(|G|, |\phi|)$.
 \end{defn}
+
 \bigbreak
+
 \begin{defn}
 We say that an objective function $\Phi$ is \textit{acyclic} when, for all games $G$, if there is a trajectory sequence $\phi$ so that $\Phi(G, \phi)$ holds, then there is a trajectory sequence $\phi'$ so that $\Phi(G, \phi')$ holds and there are no repeated piece states in $\phi'$.
 \end{defn}
+
+\subsection{The k-cleared-cells problem}
+The main Lumines goal this paper is concerned with is the problem of maximizing the amount of cleared cells given a particular game. Naturally the domain of the problem is the simplified version of Lumines previously presented in~\ref{sub:formal}. Furthermore we add the constraint no block in play can visit a single position more than once. This effectively turns the k-cleared-cells-problem into an acyclic objective function. Since in the video game blocks drop at a fast speed, this constraint brings the problem domain closer to the actual game.
+
+The problem is formally defined as follows:
+
+\begin{quote}
+\textbf{The (offline, no-rotation, acyclic) k-cleared-cells problem}: Given a Lumines game $G=(B_0, P_1, \ldots, P_p)$ and a goal $k \in \mathbb{N}$, does there exist an acyclic trajectory sequence $\phi=(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$, such that when $\phi$ is applied to $G$ at least $k$ cells are cleared in total?
+\end{quote}
+
