--- a/config/config.tex
+++ b/config/config.tex
@@ -1,6 +1,6 @@
 \newcommand{\cauthor}{André Nyström \& Axel Riese}
-\newcommand{\ctitle}{Algorithms and Complexity for Video and Computer Games}
-\newcommand{\csubtitle}{A Lumines survey}
+\newcommand{\ctitle}{Lumines is NP-complete}
+\newcommand{\csubtitle}{Or at least if your gamepad is broken}
 \newcommand{\cdate}{\today}
 \newcommand{\caddress}
 {
