--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{algpseudocode}
 \usepackage{float}
 \usepackage{tikz}
+\usetikzlibrary{decorations.pathreplacing}
 \usepackage{mathtools}
 \usepackage{enumitem}
 \usepackage{calc}
@@ -30,7 +31,7 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \input{config/config.tex}
-\input{pkg/blocks.tex}
+\input{pkg/cells.tex}
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[section] % reset theorem numbering for each chapter
 
