--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -33,12 +33,16 @@
     \cellb{#1+3}{#2}
 }
 
-\newcommand{\welltop}[2]
+\newcommand{\topblock}[2]
 {
     \stripew{#1}{#2}
     \toprow{#1}{#2+1}
-    \stripew{#1}{#2+2}
-    \toprow{#1}{#2+3}
+}
+
+\newcommand{\welltop}[2]
+{
+    \topblock{#1}{#2}
+    \topblock{#1}{#2+2}
 }
 
 \newcommand{\wellclosed}[2]
@@ -55,4 +59,15 @@
     \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
     \welltop{#1}{#2+4}
     \wellclosed{#1}{#2+8}
+}
+
+\newcommand{\welldetailed}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \wellbot{#1}{#2+4}
+    \topblock{#1}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \welltop{#1}{#2+10}
+    \wellclosed{#1}{#2+14}
 }
