--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -22,7 +22,7 @@ The Subset Sum Problem plays a crucial role in this report; it is the chosen tpr
 \subsection{Previous studies}
 \subsubsection{Classical Nintendo Games}
 
-In the paper on Classical Nintendo Games the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard. The paper states that it is easy to understand that most games are members of PSPACE because their behaviour is a deterministic function of the player's controller input. The paper focus on the reachability problem in the aforementioned games, that is if it is possible to get from point A to point B on a generalized gameboard. Using the NP-complete problem 3-SAT the authors build a framework of ``gadgets'' to prove NP-hardness. For PSPACE-hardness a similar framework is used with the True Quantified Boolean Formula. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the Push-1 \cite{push1} and PushPush-1 \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness in some of the games implementing these games as puzzles. 
+In the paper on Classical Nintendo Games the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard \cite{classic}. The paper states that it is easy to understand that most games are members of PSPACE because their behaviour is a deterministic function of the player's controller input. The paper focus on the reachability problem in the aforementioned games, that is if it is possible to get from point A to point B on a generalized gameboard. Using the NP-complete problem 3-SAT the authors build a framework of ``gadgets'' to prove NP-hardness. For PSPACE-hardness a similar framework is used with the True Quantified Boolean Formula. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the Push-1 \cite{push1} and PushPush-1 \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness in some of the games implementing these games as puzzles. 
 
 \subsubsection{Lemmings}
 
